fix: scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,30 @@
   background: url("../src/assets/images/bghome.svg");
   overflow-x: hidden;
 }
+
+
+
+
+/* Chrome, Safari, Edge */
+.scroll-area::-webkit-scrollbar {
+  width: 4px;
+}
+
+.scroll-area::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.scroll-area::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 6px;
+}
+
+.scroll-area::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+/* Firefox */
+.scroll-area {
+  scrollbar-width: thin;
+  scrollbar-color: #888 transparent;
+}
